<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/nextpgbtn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:minHeight="48dp"
            android:text="@string/logindetails"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextTextPassword"
            app:layout_constraintVertical_bias="0.13">

        </Button>

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="145dp"
            android:autofillHints=""
            android:drawableStart="@drawable/blue_person"
            android:ems="10"

            android:hint="@string/username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="2dp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextPersonName"
            app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:autofillHints=""
            android:drawableStart="@drawable/password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="20dp"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="30dp" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/CreateAccount"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nextpgbtn"
            app:layout_constraintHorizontal_bias="0.256"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/resetpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/ResetPassword"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.82"
            app:layout_constraintStart_toEndOf="@+id/register"
            app:layout_constraintTop_toTopOf="@+id/nextpgbtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>